--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="container">
         <div class="result">0</div>
         <div class="buttons">
-            <span class="button resetBtn">AC</span>
+            <span class="button resetBtn">C</span>
             <span class="button negative operator">+/-</span>
             <span class="button operator percent">%</span>
             <span class="button operator">/</span>
